1) Converted var to specific types 2) Used interfaces as mush as possible